--- a/gallery.html
+++ b/gallery.html
@@ -45,7 +45,7 @@
             <a href="1.png"><img src="1.png" alt="Event 1" /></a>
             <a href="10.png"><img src="10.png" alt="Event 1" /></a>
             <a href="2.png"><img src="2.png" alt="Event 1"/></a>
-            <a href="11.png"><img src="11.png" alt="Event 1" /></a>
+            <a href="11.png"><img style="width: 760px; height:570px;" src="11.png" alt="Event 1" /></a>
             <a href="3.png"><img src="3.png" alt="Event 1" /></a>
             <a href="4.png"><img src="4.png" alt="Event 1" /></a>
             <a href="5.png"><img src="5.png" alt="Event 1" /></a>
