--- a/events.html
+++ b/events.html
@@ -40,7 +40,7 @@
         <div id="slider">
             <figure>
                 <img src="Banner_Landing.png" alt="Image">
-                <img src="Banner_Lightbulb.png" alt="Image">
+                <img src="Banner_Explore.png" alt="Image">
                 <img src="Banner_Code.png" alt="Image">
                 <img src="Banner_Learn.png" alt="Image">
                 <img src="Banner_Landing.png" alt="Image">
