--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
     <header>
         <div id="slider">
             <figure>
-                <img src="Banner_Landing" alt="Image">
+                <img src="Banner_Landing.png" alt="Image">
                 <img src="Banner_Explore.png" alt="Image">
                 <img src="Banner_Code.png" alt="Image">
                 <img src="Banner_Learn.png" alt="Image">
