--- a/Index.html
+++ b/Index.html
@@ -52,7 +52,7 @@
         </section>
     </div>
     <section class="content" style="text-align: justify;">
-        <h1>CREATE</h1>
+        <h1>EXPLORE</h1>
         <p>Our club is a vibrant community of programming enthusiasts. We are united by our shared passion for the technical realm, from coding to all things digital. Whether you're looking for constructive feedback on your projects or seeking answers to your technical questions, our club provides an exceptional platform to connect, collaborate, and learn from one another. By joining our community, you'll have the chance to engage with fellow coding aficionados who share your enthusiasm for this craft. Together, we cultivate an environment that promotes knowledge sharing, problem-solving, and mutual growth. No matter your skill level or area of focus, our club offers a welcoming space for you to expand your coding expertise and build meaningful connections with others who are equally captivated by the art and science of programming.</p>
     </section>
 
